--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content" 
-            android:text="select identity" />
+            android:text="@string/select_identity" />
 
         <Spinner
             android:id="@+id/identitySpinner"
@@ -39,7 +39,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="current password" />
+            android:text="@string/current_password" />
 
         <EditText
             android:id="@+id/etChangePasswordCurrent"
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dip"
-            android:text="new password" />
+            android:text="@string/new_password" />
 
         <EditText
             android:id="@+id/etChangePasswordNew"
@@ -69,7 +69,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dip"
-            android:text="confirm password" />
+            android:text="@string/confirm_password" />
 
         <EditText
             android:id="@+id/etChangePasswordConfirm"
@@ -84,7 +84,7 @@
             android:id="@+id/bChangePassword"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="change password" >
+            android:text="@string/change_password" >
         </Button>
     </LinearLayout>
 
