--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -19,7 +19,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="username" />
+            android:text="@string/username" />
 
         <EditText
             android:id="@+id/etSignupUsername"
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dip"
-            android:text="password" />
+            android:text="@string/password" />
 
         <EditText
             android:id="@+id/etSignupPassword"
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dip"
-            android:text="confirm password" />
+            android:text="@string/confirm_password" />
 
         <EditText
             android:id="@+id/etSignupPasswordConfirm"
@@ -65,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dip"
-            android:text="create identity" />
+            android:text="@string/create_identity" />
     </LinearLayout>
 
 </ScrollView>
