--- a/res/layout/activity_export_identity.xml
+++ b/res/layout/activity_export_identity.xml
@@ -21,7 +21,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="identity:" />
+            android:text="@string/identity_colon" />
 
         <Spinner
             android:id="@+id/identitySpinner"
@@ -40,7 +40,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="*backup location: " >
+            android:text="@string/backup_location" >
         </TextView>
 
         <TextView
@@ -62,6 +62,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="*note: this may or may not be the SD card depending on your ROM" />
+        android:text="@string/backup_location_note" />
 
 </LinearLayout>
