--- a/res/menu/activity_login.xml
+++ b/res/menu/activity_login.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:title="options"
+        android:title="@string/options"
         android:id="@+id/item_overflow"
         android:icon="@drawable/ic_menu_overflow"
         android:orderInCategory="100"
@@ -24,7 +24,7 @@
                 android:icon="@drawable/ic_menu_delete"
                 android:orderInCategory="400"
                 android:showAsAction="never"
-                android:title="clear local cache"/>
+                android:title="@string/clear_local_cache"/>
         </menu>
     </item>
 
