--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textAppearance="@android:attr/textAppearanceMedium"
             android:textColor="@color/surespotBlue" >
         </TextView>
 
