--- a/res/layout/activity_auto_backup.xml
+++ b/res/layout/activity_auto_backup.xml
@@ -1,7 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"    
+    android:layout_height="match_parent"
     tools:context=".AutoBackupActivity" >
 
     <LinearLayout
@@ -16,19 +16,19 @@
             android:id="@+id/helpAutoBackup1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:linksClickable="true" >
         </TextView>
 
         <TextView
-            
             android:id="@+id/helpAutoBackup2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:linksClickable="true" >
         </TextView>
 
         <CheckBox
-            
             android:id="@+id/cbAutoBackup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
