--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -28,9 +28,11 @@
             android:id="@+id/tvAboutAbout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
-            android:textAppearance="@android:attr/textAppearanceMedium"
-            android:textColor="@color/surespotBlue" >
+            android:textColor="@color/surespotBlue"
+            android:textSize="20sp" >
         </TextView>
 
         <TextView
